# pymyenv

./: .gitignore  .myenv  Makefile  README.md  README.rst  pyproject.toml  setup.py
config/: project.py  python.py  version.py
pymyenv/: __init__.py  main.py  static.py  version.py
pymyenv/endpoints/: hello.py
src/pymyenv/scripts/: foo.py
