[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymyenv"
version = "0.0.8"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "pymyenv manages environments for you"
readme = "README.md"
license = "MIT"
keywords=[
    "pipenv",
    "pip",
    "virtualenv",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytconf",
    "pylogconf",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pymyenv"
"Bug Tracker" = "https://github.com/veltzer/pymyenv/issues"
"Documentation" = "https://veltzer.github.io/pymyenv"
"Download" = "https://pypi.org/project/pymyenv/"
"Repository" = "https://github.com/veltzer/pymyenv"

[project.scripts]
pymyenv = "pymyenv.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pymyenv"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pymyenv/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
